# mobmatter

./: .clang-format  .gitignore  .gitmodules  .gn  BUILD.gn  LICENSE  NOTICE  README.md  args.gni  export.sh  mmbridge.matter  mobgtw.matter  mobgtw.zap
src/application/: BUILD.gn
src/application/driven_ports/: CoverControlService.h  CoverEndpointService.h  CoverRepository.h  DeviceManagementService.h  EndpointIdGenerator.h  MobilusCoverControlService.h
src/application/model/: EndpointId.h  Flags.h  MobilusDeviceId.h  MobilusDeviceType.h  Percent.h  UniqueId.cpp  UniqueId.h
src/application/model/window_covering/: Cover.cpp  Cover.h  CoverAdded.h  CoverEndProductType.h  CoverFeature.h  CoverLiftCurrentPositionChanged.h  CoverLiftMotionChanged.h  CoverLiftRequested.h  CoverLiftTargetPositionChanged.h  CoverMarkedAsReachable.h  CoverMarkedAsUnreachable.h  CoverMotion.h  CoverNameChanged.h  CoverOperationalStatus.h  CoverOperationalStatusChanged.h  CoverRemoved.h  CoverRenameRequested.h  CoverSpecification.cpp  CoverSpecification.h  CoverStopMotionRequested.h  Position.h  PositionState.cpp  PositionState.h  PositionStatus.h
src/application/subscribers/: ChipCoverEndpointSubscriber.cpp  ChipCoverEndpointSubscriber.h  CoverControlSubscriber.cpp  CoverControlSubscriber.h  CoverEndpointSubscriber.cpp  CoverEndpointSubscriber.h  DeviceManagementSubscriber.cpp  DeviceManagementSubscriber.h  MobilusCoverControlSubscriber.cpp  MobilusCoverControlSubscriber.h
src/common/logging/: BUILD.gn  LogHandler.h  LogLevel.h  Logger.cpp  Logger.h
src/common/logging/handlers/: NoopLogHandler.h  StdioLogHandler.cpp  StdioLogHandler.h  SyslogHandler.cpp  SyslogHandler.h
src/common/persistence/sqlite/: BUILD.gn  Connection.cpp  Connection.h  Result.h  SqliteError.h  Statement.cpp  Statement.h
src/driven_adapters/matter/zcl/: BUILD.gn  ZclCoverEndpointService.cpp  ZclCoverEndpointService.h  ZclDeviceEndpoint.cpp  ZclDeviceEndpoint.h
src/driven_adapters/mobilus/: BUILD.gn  MqttMobilusCoverControlService.cpp  MqttMobilusCoverControlService.h  MqttMobilusDeviceManagementService.cpp  MqttMobilusDeviceManagementService.h
src/driven_adapters/mobilus/cover_control/: MqttMobilusCoverControlService.cpp  MqttMobilusCoverControlService.h
src/driven_adapters/persistence/sqlite/: BUILD.gn  SqliteCoverRepository.cpp  SqliteCoverRepository.h  SqliteEndpointIdGenerator.cpp  SqliteEndpointIdGenerator.h
src/driving_adapters/matter/cluster_stubs/: BUILD.gn  ClusterStubsAdapter.cpp  ClusterStubsAdapter.h  IdentifyAttributeAccessStub.cpp  IdentifyAttributeAccessStub.h  IdentifyCommandHandlerStub.h
src/driving_adapters/matter/cover_cluster/: BUILD.gn  BridgedDeviceBasicInfoAttributeAccess.cpp  BridgedDeviceBasicInfoAttributeAccess.h  CoverAttributeAccess.cpp  CoverAttributeAccess.h  CoverClusterAdapter.cpp  CoverClusterAdapter.h  CoverCommandHandler.cpp  CoverCommandHandler.h
src/driving_adapters/matter/window_covering_cluster/: BUILD.gn  BridgedDeviceBasicInfoAttributeAccess.cpp  BridgedDeviceBasicInfoAttributeAccess.h  WindowCoveringAttributeAccess.cpp  WindowCoveringAttributeAccess.h  WindowCoveringClusterAdapter.cpp  WindowCoveringClusterAdapter.h  WindowCoveringCommandHandler.cpp  WindowCoveringCommandHandler.h
src/driving_adapters/mobilus/: BUILD.gn  CompositeMobilusDeviceEventHandler.hpp  ConversionUtils.cpp  ConversionUtils.h  DeviceState.h  DeviceStateMap.h  HandlerResult.h  Log.h  MobilusDeviceEventHandler.h  MobilusDeviceInfoHandler.h  MobilusDeviceInitHandler.h  MobilusDeviceNameHandler.h  MobilusDeviceSyncHandler.h  MobilusEventHandler.h  MqttMobilusDeviceEventSubscriber.cpp  MqttMobilusDeviceEventSubscriber.h  MqttMobilusDeviceInfoSyncer.cpp  MqttMobilusDeviceInfoSyncer.h  MqttMobilusDeviceInitializer.cpp  MqttMobilusDeviceInitializer.h  MqttMobilusDeviceNameSyncer.cpp  MqttMobilusDeviceNameSyncer.h  MqttMobilusDeviceStateSyncer.cpp  MqttMobilusDeviceStateSyncer.h  MqttMobilusDeviceSyncer.cpp  MqttMobilusDeviceSyncer.h  MqttMobilusEventSubscriber.cpp  MqttMobilusEventSubscriber.h
src/driving_adapters/mobilus/cover/: BUILD.gn  MobilusCoverEventHandler.cpp  MobilusCoverEventHandler.h  MobilusCoverInitHandler.cpp  MobilusCoverInitHandler.h  MobilusCoverNameHandler.cpp  MobilusCoverNameHandler.h
src/driving_adapters/mobilus/device_events/: BUILD.gn  MobilusCoverEventHandler.cpp  MobilusCoverEventHandler.h  MobilusEventHandler.h  MqttMobilusDeviceStateSyncer.cpp  MqttMobilusDeviceStateSyncer.h  MqttMobilusEventSubscriber.cpp  MqttMobilusEventSubscriber.h
src/driving_adapters/mobilus/generic/: BUILD.gn  (+2 more)
src/matter/: AppComponent.h  BUILD.gn  ChipAppMain.cpp  ChipAppMain.h  CommissionableDataProviderImpl.cpp  CommissionableDataProviderImpl.h  DacProviderImpl.cpp  DacProviderImpl.h  DeviceEndpointLoader.hpp  DeviceInfoProviderImpl.cpp  DeviceInfoProviderImpl.h  DeviceInstanceInfoProviderImpl.cpp  DeviceInstanceInfoProviderImpl.h
src/matter/event_loop/: BUILD.gn  DomainEventPublisherAdapter.cpp  DomainEventPublisherAdapter.h  MobilusGtwEventLoopAdapter.cpp  MobilusGtwEventLoopAdapter.h  MqttMobilusGtwClientAdapter.cpp  MqttMobilusGtwClientAdapter.h
src/matter/logging/: BUILD.gn  LoggerAdapter.cpp  LoggerAdapter.h
src/matter/persistence/: BUILD.gn  SqlitePersistentStorageDelegate.cpp  SqlitePersistentStorageDelegate.h
tests/: BUILD.gn
tests/application/: BUILD.gn
tests/application/model/: PercentTest.cpp
tests/driven_adapters/mobilus/: BUILD.gn  MqttMobilusCoverControlServiceTest.cpp  MqttMobilusDeviceManagementServiceTest.cpp
tests/driving_adapters/mobilus/: BUILD.gn  CompositeMobilusDeviceEventHandlerTest.cpp  FakeDeviceEventHandler.hpp  FakeDeviceInfoHandler.hpp  FakeDeviceNameHandler.hpp  FakeDeviceSyncHandler.hpp  FakeEventHandler.hpp  MqttMobilusDeviceEventSubscriberTest.cpp  MqttMobilusDeviceInfoSyncerTest.cpp  MqttMobilusDeviceInitializerTest.cpp  MqttMobilusDeviceNameSyncerTest.cpp  MqttMobilusDeviceStateSyncerTest.cpp  MqttMobilusDeviceSyncerTest.cpp  MqttMobilusEventSubscriberTest.cpp
tests/mobilus/: BUILD.gn  FakeMqttMobilusGtwClient.h  MockMqttMobilusGtwClient.hpp
(+74 files in other folders)
