executable("tests") {
  testonly = true

  deps = [
    "application",
    "driven_adapters/mobilus",
    "driven_adapters/persistence/sqlite",
    "driving_adapters/mobilus:device_initializer",
    "driving_adapters/mobilus:event_subscriber",
    "//third_party/googletest:gtest_main",
  ]

  output_dir = root_out_dir
}
