config("tests_include") {
  include_dirs = [
    "//include",
    "//src",
    "//tests",
  ]
}

executable("tests") {
  testonly = true

  deps = [
    "application",
    "driven_adapters/mobilus",
    "driven_adapters/persistence/sqlite",
    "driving_adapters/mobilus",
    "driving_adapters/mobilus/device_handlers:cover",
    "driving_adapters/mobilus/device_handlers:device_syncer",
    "//third_party/googletest:gtest_main",
  ]

  output_dir = root_out_dir
}
