import("//build_overrides/chip.gni")

source_set("matter") {
  sources = [
    "ChipAppMain.cpp",
    "CommissionableDataProviderImpl.cpp",
    "DacProviderImpl.cpp",
    "DeviceInfoProviderImpl.cpp",
    "DeviceInstanceInfoProviderImpl.cpp",
  ]

  public = [
    "AppComponent.h",
    "ChipAppMain.h",
    "CommissionableDataProviderImpl.h",
    "DacProviderImpl.h",
    "DeviceInfoProviderImpl.h",
    "DeviceInstanceInfoProviderImpl.h",
  ]

  deps = [
    "${chip_root}/src/app/server",
    "${chip_root}/src/lib",
    "${chip_root}/src/platform/logging:default",
    "//third_party/mobilus_gtw_client",
  ]

  public_deps = [ "//:mobgtw-zap" ]

  configs += [ "//:includes" ]
}
