source_set("logging") {
  sources = [ "Logger.cpp" ]

  public = [
    "LogHandler.h",
    "LogLevel.h",
    "Logger.h",
    "handlers/NoopLogHandler.h",
  ]

  configs += [ "//:app_includes" ]

  cflags_cc = [ "-Wno-format-nonliteral" ]
}

source_set("syslog") {
  sources = [ "handlers/SyslogHandler.cpp" ]

  public = [ "handlers/SyslogHandler.h" ]

  deps = [ ":logging" ]

  configs += [ "//:app_includes" ]
}

source_set("stdio") {
  sources = [ "handlers/StdioLogHandler.cpp" ]

  public = [ "handlers/StdioLogHandler.h" ]

  deps = [ ":logging" ]

  configs += [ "//:app_includes" ]
}
