source_set("cover_control") {
  sources = [ "MqttMobilusCoverControlService.cpp" ]

  public = [ "MqttMobilusCoverControlService.h" ]

  deps = [
    "//src/application",
    "//third_party/mobilus_gtw_client",
  ]

  configs += [ "//:includes" ]
}

source_set("device_management") {
  sources = [ "MqttMobilusDeviceManagementService.cpp" ]

  public = [ "MqttMobilusDeviceManagementService.h" ]

  deps = [
    "//src/application",
    "//third_party/mobilus_gtw_client",
  ]

  configs += [ "//:includes" ]
}
