source_set("cover_control") {
  sources = [ "MqttMobilusCoverControlService.cpp" ]

  public = [ "MqttMobilusCoverControlService.h" ]

  deps = [
    "//src/application",
    "//third_party/mobgtw",
  ]

  configs += [ "//:app_includes" ]
}

source_set("device_management") {
  sources = [ "MqttMobilusDeviceManagementService.cpp" ]

  public = [ "MqttMobilusDeviceManagementService.h" ]

  deps = [
    "//src/application",
    "//third_party/mobgtw",
  ]

  configs += [ "//:app_includes" ]
}
