source_set("common") {
  sources = [
    "ConversionUtils.cpp",
    "ConversionUtils.h",
    "Log.h",
  ]

  deps = [ "//src/application" ]

  configs += [ "//:app_includes" ]
}

source_set("device_syncer") {
  sources = [ "MqttMobilusDeviceSyncer.cpp" ]

  public = [ "MqttMobilusDeviceSyncer.h" ]

  deps = [
    ":common",
    "//src/application",
    "//third_party/mobilus_gtw_client",
  ]

  configs += [ "//:app_includes" ]
}

source_set("device_info_syncer") {
  sources = [ "MqttMobilusDeviceInfoSyncer.cpp" ]

  public = [ "MqttMobilusDeviceInfoSyncer.h" ]

  deps = [
    ":common",
    "//src/application",
    "//third_party/mobilus_gtw_client",
  ]

  configs += [ "//:app_includes" ]
}

source_set("device_event_subscriber") {
  sources = [ "MqttMobilusDeviceEventSubscriber.cpp" ]

  public = [ "MqttMobilusDeviceEventSubscriber.h" ]

  deps = [
    ":common",
    "//src/application",
    "//third_party/mobilus_gtw_client",
  ]

  configs += [ "//:app_includes" ]
}
