source_set("device_syncer") {
  sources = [ "MqttMobilusDeviceSyncer.cpp" ]

  public = [ "MqttMobilusDeviceSyncer.h" ]

  deps = [
    "//src/application",
    "//third_party/mobilus_gtw_client",
  ]

  configs += [ "//:app_includes" ]
}

source_set("device_event_subscriber") {
  sources = [ "MqttMobilusDeviceEventSubscriber.cpp" ]

  public = [ "MqttMobilusDeviceEventSubscriber.h" ]

  deps = [
    "//src/application",
    "//third_party/mobilus_gtw_client",
  ]

  configs += [ "//:app_includes" ]
}
