source_set("device_syncer") {
  sources = [ "MqttMobilusDeviceSyncer.cpp" ]

  public = [ "MqttMobilusDeviceSyncer.h" ]

  deps = [
    "//src/application",
    "//third_party/mobgtw",
  ]

  configs += [ "//:app_includes" ]
}

source_set("device_event_subscriber") {
  sources = [ "MqttMobilusDeviceEventSubscriber.cpp" ]

  public = [ "MqttMobilusDeviceEventSubscriber.h" ]

  deps = [
    "//src/application",
    "//third_party/mobgtw",
  ]

  configs += [ "//:app_includes" ]
}
