import("//build_overrides/chip.gni")

source_set("event_loop") {
  sources = [
    "DomainEventPublisherAdapter.cpp",
    "MobilusGtwEventLoopAdapter.cpp",
  ]

  public = [
    "DomainEventPublisherAdapter.h",
    "MobilusGtwEventLoopAdapter.h",
  ]

  deps = [
    "${chip_root}/src/lib",
    "//src/common/domain",
    "//third_party/mobilus_gtw_client",
  ]

  configs += [ "//:includes" ]
}
