source_set("mobilus") {
  sources = [ "MqttMobilusCoverControlServiceTest.cpp" ]

  include_dirs = [
    "//src",
    "//tests",
  ]

  deps = [
    "//src/application",
    "//src/common/logging",
    "//src/driven_adapters/mobilus:cover_control",
    "//tests/mobilus:fake_mobilus_gtw_client",
    "//third_party/googletest:gtest",
  ]
}
