source_set("mobilus") {
  sources = [
    "MqttMobilusCoverControlServiceTest.cpp",
    "MqttMobilusDeviceManagementServiceTest.cpp",
  ]

  deps = [
    "//src/application",
    "//src/common/logging",
    "//src/driven_adapters/mobilus:cover_control",
    "//src/driven_adapters/mobilus:device_management",
    "//tests/mobilus:mock_client",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest",
  ]

  configs += [ "//tests:tests_include" ]
}
