source_set("mobilus") {
  sources = [
    "CompositeMobilusDeviceEventHandlerTest.cpp",
    "MqttMobilusDeviceEventSubscriberTest.cpp",
    "MqttMobilusDeviceInitializerTest.cpp",
    "MqttMobilusDeviceNameSyncerTest.cpp",
    "MqttMobilusDeviceStateSyncerTest.cpp",
  ]

  deps = [
    "//src/application",
    "//src/common/logging",
    "//src/driving_adapters/mobilus:device_event_subscriber",
    "//src/driving_adapters/mobilus:device_initializer",
    "//src/driving_adapters/mobilus:device_name_syncer",
    "//src/driving_adapters/mobilus:device_state_syncer",
    "//tests/mobilus:mock_client",
    "//third_party/googletest:gtest",
  ]

  configs += [ "//tests:tests_include" ]
}
