source_set("mobilus") {
  sources = [
    "MqttMobilusDeviceEventSubscriberTest.cpp",
    "MqttMobilusDeviceInfoSyncerTest.cpp",
    "MqttMobilusDeviceSyncerTest.cpp",
  ]

  public = [
    "FakeDeviceEventHandler.hpp",
    "FakeDeviceInfoHandler.hpp",
    "FakeDeviceSyncHandler.hpp",
  ]

  deps = [
    "//src/application",
    "//src/common/logging",
    "//src/driving_adapters/mobilus:device_event_subscriber",
    "//src/driving_adapters/mobilus:device_info_syncer",
    "//src/driving_adapters/mobilus:device_syncer",
    "//tests/mobilus:mock_client",
    "//third_party/googletest:gtest",
  ]

  configs += [ "//tests:tests_include" ]
}
