source_set("sqlite") {
  sources = [
    "SqliteCoverRepository.cpp",
    "SqliteEndpointIdGenerator.cpp",
  ]

  public = [
    "SqliteCoverRepository.h",
    "SqliteEndpointIdGenerator.h",
  ]

  deps = [
    "//src/application",
    "//src/common/persistence/sqlite",
  ]

  configs += [ "//:app_includes" ]
}
