source_set("sqlite") {
  sources = [
    "SqliteCoverRepository.cpp",
    "SqliteEndpointIdGenerator.cpp",
  ]

  public = [
    "SqliteCoverRepository.h",
    "SqliteEndpointIdGenerator.h",
  ]

  deps = [ "//src/application" ]

  public_deps = [ "//src/common/persistence/sqlite" ]

  configs += [ "//:app_includes" ]
}
