import("//build_overrides/chip.gni")

source_set("cluster_stubs") {
  sources = [
    "ClusterStubsAdapter.cpp",
    "IdentifyAttributeAccessStub.cpp",
  ]

  public = [
    "ClusterStubsAdapter.h",
    "IdentifyAttributeAccessStub.h",
    "IdentifyCommandHandlerStub.h",
  ]

  deps = [
    "${chip_root}/src/app",
    "//src/application",
  ]

  configs += [ "//:app_includes" ]
}
