import("//build_overrides/chip.gni")

source_set("cover_cluster") {
  sources = [
    "BridgedDeviceBasicInfoAttributeAccess.cpp",
    "CoverAttributeAccess.cpp",
    "CoverCommandHandler.cpp",
    "CoverClusterAdapter.cpp",
  ]

  public = [
    "BridgedDeviceBasicInfoAttributeAccess.h",
    "CoverAttributeAccess.h",
    "CoverCommandHandler.h",
    "CoverClusterAdapter.h",
  ]

  deps = [
    "${chip_root}/src/app",
    "//src/application",
  ]
  
  configs += ["//:includes"]
}
