import("//build_overrides/chip.gni")

source_set("cover_cluster") {
  sources = [
    "BridgedDeviceBasicInfoAttributeAccess.cpp",
    "CoverAttributeAccess.cpp",
    "CoverClusterAdapter.cpp",
    "CoverCommandHandler.cpp",
  ]

  public = [
    "BridgedDeviceBasicInfoAttributeAccess.h",
    "CoverAttributeAccess.h",
    "CoverClusterAdapter.h",
    "CoverCommandHandler.h",
  ]

  deps = [
    "${chip_root}/src/app",
    "//src/application",
  ]

  configs += [ "//:app_includes" ]
}
