import("//build_overrides/chip.gni")

source_set("window_covering_cluster") {
  sources = [
    "BridgedDeviceBasicInfoAttributeAccess.cpp",
    "WindowCoveringAttributeAccess.cpp",
    "WindowCoveringCommandHandler.cpp",
    "WindowCoveringClusterAdapter.cpp",
  ]

  public = [
    "BridgedDeviceBasicInfoAttributeAccess.h",
    "WindowCoveringAttributeAccess.h",
    "WindowCoveringCommandHandler.h",
    "WindowCoveringClusterAdapter.h",
  ]

  deps = [
    "${chip_root}/src/app",
    "//src/application",
  ]
  
  configs += ["//:includes"]
}
