source_set("cover") {
  sources = [
    "MobilusCoverEventHandler.cpp",
    "MobilusCoverInitHandler.cpp",
  ]

  public = [
    "MobilusCoverInitHandler.h",
    "MobilusCoverEventHandler.h",
  ]

  deps = [
    "//src/driving_adapters/mobilus:common",
    "//src/application",
  ]
  
  configs += ["//:includes"]
}
