source_set("cover") {
  sources = [
    "MobilusCoverEventHandler.cpp",
    "MobilusCoverInitHandler.cpp",
    "MobilusCoverNameHandler.cpp",
  ]

  public = [
    "MobilusCoverEventHandler.h",
    "MobilusCoverInitHandler.h",
    "MobilusCoverNameHandler.h",
  ]

  deps = [
    "//src/application",
    "//src/driving_adapters/mobilus:common",
  ]

  public_deps = [ "//third_party/mobilus_gtw_client" ]

  configs += [ "//:app_includes" ]
}
