source_set("generic") {
  sources = [ "MobilusDeviceInfoSyncerAdapter.cpp" ]

  public = [ "MobilusDeviceInfoSyncerAdapter.h" ]

  deps = [ "//src/driving_adapters/mobilus:device_info_syncer" ]

  public_deps = [ "//third_party/mobilus_gtw_client" ]

  configs += [ "//:app_includes" ]
}

source_set("cover") {
  sources = [ "MobilusCoverHandler.cpp" ]

  public = [ "MobilusCoverHandler.h" ]

  deps = [ "//src/application" ]

  public_deps = [ "//third_party/mobilus_gtw_client" ]

  configs += [ "//:app_includes" ]
}
