source_set("sqlite") {
  sources = [
    "SqliteCoverRepositoryTest.cpp",
    "SqliteEndpointIdGeneratorTest.cpp",
  ]

  deps = [
    "//src/application",
    "//src/driven_adapters/persistence/sqlite",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest",
  ]

  configs += [ "//tests:tests_include" ]
}
