source_set("sqlite") {
  sources = [
    "SqliteCoverRepositoryTest.cpp",
    "SqliteEndpointIdGeneratorTest.cpp",
  ]

  deps = [
    "//src/application",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest",
  ]

  public_deps = [ "//src/driven_adapters/persistence/sqlite" ]

  configs += [ "//tests:tests_include" ]
}
