source_set("cover") {
  sources = [
    "MobilusCoverEventHandlerTest.cpp",
    "MobilusCoverInitHandlerTest.cpp",
    "MobilusCoverNameHandlerTest.cpp",
  ]

  include_dirs = [
    "//src",
    "//tests",
  ]

  deps = [
    "//src/application",
    "//src/common/logging",
    "//src/driving_adapters/mobilus/cover",
    "//tests/driven_adapters/persistence/in_memory",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest",
  ]
}
